# smith

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  meson.build  smith.code-workspace
include/: common.hpp  global.hpp
include/entity/: entity_types.hpp
include/interfaces/: CBaseInterface.hpp
include/platform/: platform.hpp
include/types/: CTime.hpp  Color.hpp  EntityType.hpp  Vector.hpp
include/util/: SmithThreadPool.hpp  constexpr_file.hpp  hash_fnv1a.hpp  hash_murmur2.hpp  misc.hpp  random.hpp  rtti.hpp  saving.hpp
release/smithengine/: controls.txt  launch.sh  options.txt
release/smithengine/resource/audio/: soldier_hey.old
resource/: profiling.txt
resource/audio/peaks/: shotgun_reload.ogg.reapeaks  shotgun_reloadl.ogg.reapeaks
resource/definition/: animation.json  lvldeath.json  lvldev.json  lvldev_light.json  material.json
server/include/: svglobal.hpp
server/src/: find.sh  main.cpp  meson.build
server/src/server/: server.cpp  server.hpp
src/: main.cpp  meson.build
src/anim/: Animation.cpp  Animation.hpp
src/anim/directional/: AnimDirectional.cpp  AnimDirectional.hpp
src/anim/viewmodel/: AnimViewmodel.cpp  AnimViewmodel.hpp
src/audio/: audio.cpp  audio.hpp  audio_types.hpp  audiofiles.cpp  audiofiles.hpp  format.txt  soundcommand.hpp  streamgroup.hpp
src/data/: CAnimData.hpp  CBaseSerializable.hpp  Texture.cpp  Texture.hpp  level.cpp  level.hpp
src/data/image/: CImageLoader.cpp  CImageLoader.hpp
src/data/level/: level_types.cpp  level_types.hpp
src/editor/: editor.cpp  editor.hpp  editor_helpers.hpp
src/engine/: engine.cpp  engine.hpp
src/entity/: CBaseEntity.cpp  CBaseEntity.hpp  CBaseRenderable.hpp  CMove.hpp
src/entity/components/: CBaseEntityComponent.cpp  CBaseEntityComponent.hpp
src/entity/components/AI/: CBehaviour.cpp  CBehaviour.hpp
src/entity/components/animation/: CAnimationController.cpp  CAnimationController.hpp  CAnimationSequence.hpp
src/entity/components/pathfinder/: CPathFinder.cpp  CPathFinder.hpp
src/entity/components/pathfinder/precise/: CPathVoxel.cpp  CPathVoxel.hpp  CreateInterface_.code-search
src/entity/dynamic/: CBaseEnemy.cpp  CBaseEnemy.hpp  CDirectionalEntity.cpp  CDirectionalEntity.hpp  CDynamicEntity.hpp  EntView.hpp  enemy_shared.hpp
src/entity/dynamic/enemy/: AI.md  CEnemySoldier.cpp  CEnemySoldier.hpp  enemy_util.hpp
src/entity/dynamic/enemy/soldier/: CSoldier.cpp  CSoldier.hpp
src/entity/level/: CBaseDoorControl.cpp  CBaseDoorControl.hpp
src/entity/particle/: CParticleEmitter.cpp  CParticleEmitter.hpp
src/entity/player/: CCamera.hpp  CInventory.hpp  CPlayer.cpp  CPlayer.hpp  CViewmodel.cpp  CViewmodel.hpp
src/entity/prop/: CBaseProp.cpp  CBaseProp.hpp  CStaticProp.hpp
src/entity/prop/generic/: CLevelProp.cpp  CLevelProp.hpp
src/entity/prop/objects/: CBarrel.hpp  CGreenLight.hpp  CPillar.hpp  objects.cpp
src/entity/weapon/: CBaseWeapon.cpp  CBaseWeapon.hpp  weapons.hpp  weaponservices.hpp
src/entity/weapon/SMG/: CWeaponSMG.cpp  CWeaponSMG.hpp
src/entity/weapon/pistol/: CWeaponPistol.cpp  CWeaponPistol.hpp
src/entity/weapon/shotgun/: CWeaponShotgun.cpp  CWeaponShotgun.hpp
src/events/: CEventManager.hpp  event_types.hpp
src/interfaces/: IEngineTime.cpp  IEngineTime.hpp  interfaces.hpp
src/interfaces/IAnimationSystem/: IAnimationSystem.cpp  IAnimationSystem.hpp
src/interfaces/IEngineTime/: CProfiler.cpp  CProfiler.hpp  IEngineTime.cpp  IEngineTime.hpp
src/interfaces/IEntitySystem/: EntRegistry.cpp  EntRegistry.hpp  IEntitySystem.cpp  IEntitySystem.hpp
src/interfaces/IFileSystem/: IFileSystem.cpp  IFileSystem.hpp
src/interfaces/IInputSystem/: IInputSystem.cpp  IInputSystem.hpp
src/interfaces/ILevelManager/: ILevelManager.cpp  ILevelManager.hpp
src/interfaces/ILevelSystem/: ILevelSystem.cpp  ILevelSystem.hpp
src/interfaces/ILightingSystem/: ILightingSystem.cpp  ILightingSystem.hpp  LightRegistry.hpp
src/interfaces/IResourceSystem/: IResourceSystem.cpp  IResourceSystem.hpp
src/interfaces/ITextureSystem/: ITextureSystem.cpp  ITextureSystem.hpp
src/light/: CLight.cpp  CLight.hpp  CLightDynamic.hpp  CLightOverhead.cpp  CLightOverhead.hpp  CLightSun.hpp  CLightWeapon.hpp  lights.hpp
src/logger/: logger.cpp  logger.hpp
src/plat/: CLaunchOptions.hpp  CSystemDialog.hpp  CSystemWindow.hpp  platform.cpp  platform.hpp  platform_util.hpp
src/renderer/: raycast.hpp  render_helpers.hpp  renderer.cpp  renderer.hpp  renderwolf.cpp
src/renderer/render2/: render2.hpp
(+4 files in other folders)
